--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,10 +7,10 @@
           <h1 class="hero__title title title--light">Ice cream made with passion</h1>
           <ul class="hero__main-list">
             <li class="hero__main-item">
-              <a class="hero__main-link" href="#Products">Products</a>
+              <a class="hero__main-linkA" href="#Products">Products</a>
             </li>
             <li class="hero__main-item">
-              <a class="hero__main-link" href="#Made">How it`s made?</a>
+              <a class="hero__main-linkB" href="#Made">How it`s made?</a>
             </li>
           </ul>
           <!-- <div class="hero__buttons">
