--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -100,6 +100,7 @@
         @include tablet {
       margin-top: 1.5em;
       margin-bottom: 0.75em;
+      width:fit-content;
       }
 
       @include desktop {
