--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -86,6 +86,10 @@
     border-radius: 50%;
     margin-top: 54px;
     min-width: 278px;
+    background: linear-gradient(0deg, rgba(248, 210, 78, 0.7) 0%, rgba(248, 210, 78, 0.7) 100%),
+      #d9d9d9;
+    padding-top: 25px;
+    box-shadow: 0px 8px 30px 0px rgba(153, 114, 23, 0.25);
     @include tablet {
       max-width: 330px;
     }
@@ -110,13 +114,15 @@
   &__text-list {
     font-size: $S-text-size;
     color: $title-white;
-    word-spacing: 4px;
     margin-bottom: 4px;
+    letter-spacing: 1px;
     @include tablet {
       margin-bottom: 8px;
     }
     @include desktop {
-      min-width: none;
+      font-size: 16px;
+      line-height: 176%;
+      letter-spacing: 0.64px;
     }
   }
   &__box-list-last-item {
