--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -63,7 +63,7 @@
   }
 
   &__title {
-    //width: 247px;
+
 
     height: 97px;
     color: $title-white;
@@ -89,72 +89,73 @@
     }
   }
 
-  // zastępcze
 
-   &__main-list {
-   	display: flex;
-    align-items: baseline;
-   	gap: 12px;
-    margin-top: 32px;
-    
-        @include tablet {
-      margin-top: 1.5em;
-      margin-bottom: 0.75em;
-      width:fit-content;
-      }
+  &__main-list {
+          display: flex;
+          align-items: baseline;
+          gap: 12px;
+          margin-top: 32px;
+      
+          @include tablet {
+        margin-top: 1.5em;
+        margin-bottom: 0.75em;
+        width:274px;
+        }
 
-      @include desktop {
-      margin-top: 3.75em;
-      margin-bottom: 3.625em;
-      }
-   }
-&__main-linkA {
-  color: #f8d24e;
-  padding: 11px 26px;
- 
-   	text-align: center;
-   	font-family: Montserrat;
-   	font-size: 12px;
-   	font-style: normal;
-   	font-weight: 600;
-   	line-height: 18px;
-   	border-radius: 8px;
-    border: 1px solid #f8d24e;
+        @include desktop {
+        margin-top: 80px;
+        margin-bottom: 3.625em;
+        }
+    }
 
-    &:hover {
-   		border-color: #0a8817;
-   	}
-   	&:focus {
-   		border-color: $title-white;
-   	}
-   	&:disabled {
-   		border-color: #ababab;
-  	}
-}
 
-   &__main-linkB {
+  &__main-linkA {
     color: #f8d24e;
+    padding: 11px 26px;
+  
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 18px;
+      border-radius: 8px;
+      border: 1px solid #f8d24e;
 
-   	padding: 11px 26px;
- 
-   	text-align: center;
-   	font-family: Montserrat;
-   	font-size: 12px;
-   	font-style: normal;
-   	font-weight: 600;
-   	line-height: 18px;
-   	border-radius: 8px;
-   	text-decoration: underline;
-   	&:hover {
-   		color: #0a8817;
-   	}
-   	&:focus {
-   		color: $title-white;
-   	}
-   	&:disabled {
-   		color: #ababab;
-  	}
-   }
+      &:hover {
+        border-color: #0a8817;
+      }
+      &:focus {
+        border-color: $title-white;
+      }
+      &:disabled {
+        border-color: #ababab;
+      }
+  }
+
+  &__main-linkB {
+      color: #f8d24e;
+
+      padding: 11px 26px;
+  
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 18px;
+      border-radius: 8px;
+      text-decoration: underline;
+      &:hover {
+        color: #0a8817;
+      }
+      &:focus {
+        color: $title-white;
+      }
+      &:disabled {
+        color: #ababab;
+      }
+    }
 
   &__buttons {
     display: flex;
