update picture icecream1

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="hero__image">
-      <picture>
+ <!--    <picture>
         <source
           srcset="
             /src/images/desktop/iceCreamDesktop.png       1x,
@@ -104,6 +104,22 @@
         />
         <img src="/src/images/mobile/x2/iceCreamMobile@2x.png" alt="ice-cream" />
       </picture>
+    --> 
+<img
+                        src="../images/mobile/iceCreamMobile.png"
+                        alt="big icecream"
+                        
+                        srcset="
+                                ../images/mobile/iceCreamMobile.png 450w,
+                                ../images/mobile/iceCreamMobile.png 900w,
+                                ../images/mobile/iceCreamMobile.png 354w,
+                                ../images/mobile/iceCreamMobile.png 708w,
+                                ../images/mobile/iceCreamMobile.png 270w,
+                                ../images/mobile/iceCreamMobile.png 540w,
+                        "
+                        sizes="(min-width:1200px) 270px, (min-width:768px) 354px, (min-width:480px) 450px, 100vw"
+                        />
+
     </div>
   </div>
 </section>
