--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -106,16 +106,16 @@
       </picture>
     --> 
 <img
-                        src="../images/mobile/iceCreamMobile.png"
+                        src="../images/icecreamfotos/ice_mobile_x1.jpg"
                         alt="big icecream"
                         
                         srcset="
-                                ../images/mobile/iceCreamMobile.png 450w,
-                                ../images/mobile/iceCreamMobile.png 900w,
-                                ../images/mobile/iceCreamMobile.png 354w,
-                                ../images/mobile/iceCreamMobile.png 708w,
-                                ../images/mobile/iceCreamMobile.png 270w,
-                                ../images/mobile/iceCreamMobile.png 540w,
+                                ./images/icecreamfotos/ice_mobile_x1.jpg  450w,
+                                ./images/icecreamfotos/ice_mobile_x1.jpg  900w,
+                                ./images/icecreamfotos/ice_mobile_x1.jpg  354w,
+                                ./images/icecreamfotos/ice_mobile_x1.jpg  708w,
+                                ./images/icecreamfotos/ice_mobile_x1.jpg  270w,
+                                ./images/icecreamfotos/ice_mobile_x1.jpg  540w,
                         "
                         sizes="(min-width:1200px) 270px, (min-width:768px) 354px, (min-width:480px) 450px, 100vw"
                         />
