--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="hero__image">
- <!--    <picture>
+    <picture>
         <source
           srcset="
             /src/images/desktop/iceCreamDesktop.png       1x,
@@ -104,21 +104,22 @@
         />
         <img src="/src/images/mobile/x2/iceCreamMobile@2x.png" alt="ice-cream" />
       </picture>
-    --> 
-<img
-                        src="../images/icecreamfotos/ice_mobile_x1.jpg"
+    
+              <!--<img
+                        src="../src/images/icecreamfotos/icemobilex1.jpg"
                         alt="big icecream"
                         
                         srcset="
-                                ./images/icecreamfotos/ice_mobile_x1.jpg  450w,
-                                ./images/icecreamfotos/ice_mobile_x1.jpg  900w,
-                                ./images/icecreamfotos/ice_mobile_x1.jpg  354w,
-                                ./images/icecreamfotos/ice_mobile_x1.jpg  708w,
-                                ./images/icecreamfotos/ice_mobile_x1.jpg  270w,
-                                ./images/icecreamfotos/ice_mobile_x1.jpg  540w,
+                                ../src/images/icecreamfotos/icemobilex1.jpg  450w,
+                                ../src/images/icecreamfotos/icemobilex1.jpg  900w,
+                                ../src/images/icecreamfotos/icemobilex1.jpg  354w,
+                                ../src/images/icecreamfotos/icemobilex1.jpg  708w,
+                                ../src/images/icecreamfotos/icemobilex1.jpg  270w,
+                                ../src/images/icecreamfotos/icemobilex1.jpg  540w,
                         "
                         sizes="(min-width:1200px) 270px, (min-width:768px) 354px, (min-width:480px) 450px, 100vw"
                         />
+              -->
 
     </div>
   </div>
