--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -41,10 +41,12 @@
               This is enough to choose ice cream and coffee for any mood!
             </p>
           </li>
+          <li>
+            <div class="about__button">
+              <button class="about__button-body" type="button">Read more &gt;</button>
+            </div>
+          </li>
         </ul>
-        <div class="about__button">
-          <button class="about__button-body" type="button">Read more &gt;</button>
-        </div>
       </figcaption>
     </figure>
   </div>
@@ -68,7 +70,7 @@
         <use class="advantages__icon-body" href="/src/images/how_made_icon.svg#icon-ketel"></use>
       </svg>
       <figcaption class="advantages__icon-text-box">
-        <h3 class="advantages__icon-title">16KG</h3>
+        <h3 class="advantages__icon-title">16kg</h3>
         <p class="advantages__icon-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
