--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -4,7 +4,7 @@
         <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
     </div>
     <div class="slider">
-        <img class="slider__image" src="/src/images/reviews/Emily1x.jpg" alt="kobieta">
+        <img class="slider__image" src="/src/images/reviews/Emily1x.jpg" width="85" height="85" alt="kobieta">
         <p class="slider__text">
             I love visiting your cafe. You prepare the most delicious ice
             cream in Los Angeles! In addition, you have beautiful serving,
