--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <section class="section">
-    <div class="gallery">
-        <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
+    <div class=" container gallery">
+        <div class="galerry__photo">
+            <img class="gallery__image" src="/images/6.reviews/lodyMobile2x.jpg.jpg">
+        </div>
     </div>
     <div class="slider">
-        <img class="slider__image" src="/src/images/reviews/Emily1x.jpg" alt="kobieta">
+        <img class="slider__image" src="/images/6.reviews/Emily1x.jpg.jpg" width="85" height="85" alt="kobieta">
         <p class="slider__text">
             I love visiting your cafe. You prepare the most delicious ice
             cream in Los Angeles! In addition, you have beautiful serving,
