--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <section class="section">
-    <div class="gallery">
-        <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
+    <div class=" container gallery">
+        <div class="gallery__photo">
+            <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
+        </div>
     </div>
     <div class="slider">
         <img class="slider__image" src="/src/images/reviews/Emily1x.jpg" width="85" height="85" alt="kobieta">
