--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <section class="section">
-    <div class=" container gallery">
+    <div class="container gallery">
         <div class="gallery__photo">
             <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
         </div>
     </div>
-    <div class="slider">
+    <div class="container slider">
         <img class="slider__image" src="/src/images/reviews/Emily1x.jpg" width="85" height="85" alt="kobieta">
         <p class="slider__text">
             I love visiting your cafe. You prepare the most delicious ice
