--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<div class="section">
     <div class="container gallery">
         <div class="gallery__photo">
             <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
@@ -14,4 +14,4 @@
         </p>
         <h2 class="slider__heading">Emily, Los Angeles</h2>
     </div>
-
+</div>
