--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -72,15 +72,15 @@
 
         <img class="hero__iceimgage" srcset="
                               ./images/mobile/iceCreamMobile.png 177w,
-                              ./images/mobile/x2/iceCreamMobile@x2.png 354w,
+                              ./images/mobile/x2/iceCreamMobile@2x.png 354w,
 
                               ./images/tablet/iceCreamTablet.png 268w,
                               ./images/tablet/x2/iceCreamTablet@x2.png 536w,
 
                               ./images/desktop/iceCreamDesktop.png 456w,
-                              ./images/desktop/x2/iceCreamDesktop@x2.png 912w"
+                              ./images/desktop/x2/iceCreamDesktop@2x.png 912w"
         
-        sizes="(min-width:1200px) 456px, (min-width: 768px) 268px, (min-width: 480px) 218px, 100vw"
+        sizes="(min-width:1200px) 456px, (min-width: 768px) 268px, (min-width: 480px) 218px, (min-width: 320px) 177px, 100vw"
         src="./images/mobile/iceCreamMobile.png" alt="ice cream smiling">
         
         
