--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-
-    <div class="container gallery">
-        <div class="gallery__photo">
-            <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
-        </div>
+<section class="section">
+    <div class="gallery">
+        <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
     </div>
-    <div class="container slider">
+    <div class="slider">
         <img class="slider__image" src="/src/images/reviews/Emily1x.jpg" width="85" height="85" alt="kobieta">
         <p class="slider__text">
             I love visiting your cafe. You prepare the most delicious ice
@@ -14,4 +12,4 @@
         </p>
         <h2 class="slider__heading">Emily, Los Angeles</h2>
     </div>
-
+</section>
