--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -51,7 +51,7 @@
     </figure>
   </div>
 </section>
-<section class="advantages">
+<section class="advantages container">
   <h6 class="crawler">advantages</h6>
   <div class="wrapper-icon">
     <figure class="advantages__icon-box">
