--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,5 +1,4 @@
 .about {
-  background-color: $olive-green;
   &__title-box {
     display: flex;
     flex-direction: column;
@@ -57,6 +56,7 @@
     width: 164px;
     height: 42px;
     border-radius: 10px;
+    border-color: $button-yellow;
   }
   &__button-body:hover {
     background-color: $olive-green;
