--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -49,16 +49,19 @@
   }
 }
 .wrapper-icon {
+  margin-bottom: 81px;
   @include tablet {
     min-width: 768px;
     display: flex;
     justify-content: center;
     padding-top: 60px;
+    margin-bottom: 204px;
   }
   @include desktop {
     min-width: 1200px;
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 178px;
   }
 }
 
