--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<footer>
-  <div class="container footer">
+<footer class="footer">
+  <div class="container">
     <div class="footer__wrapper">
       <div class="footer__block--title">
         <p class="footer__title">HOMEMADE ICE CREAM MADE</p>
@@ -9,43 +9,49 @@
       <div class="social-wrapper">
         <div class="social-media">
           <ul class="social-media__block">
-            <li>
+            <li class="social-media__item">
               <a
                 href="https://github.com/"
                 aria-label="Find us on GitHub"
                 target="_blank"
                 rel="nofollow noopener noreferrer"
-                class="social-media__item"
+                class="social-media__com"
               >
-                <svg class="social-media__icon" width="20px" height="20px">
-                  <use href="/src/images/icons-footer.svg#icon-github-project"></use>
-                </svg>
+                <div class="social-media__wrapper">
+                  <svg class="social-media__icon" width="20px" height="20px">
+                    <use href="/src/images/icons-footer.svg#icon-github-project"></use>
+                  </svg>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="social-media__item">
               <a
                 href="https://telegram.org/"
                 aria-label="Find us on Telegram"
                 target="_blank"
                 rel="nofollow noopener noreferrer"
-                class="social-media__item"
+                class="social-media__com"
               >
-                <svg class="social-media__icon" width="20.4px" height="15.87px">
-                  <use href="/src/images/icons-footer.svg#icon-telegram"></use>
-                </svg>
+                <div class="social-media__wrapper">
+                  <svg class="social-media__icon" width="20.4px" height="15.87px">
+                    <use href="/src/images/icons-footer.svg#icon-telegram"></use>
+                  </svg>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="social-media__item">
               <a
                 href="https://www.facebook.com/"
                 aria-label="Find us on Facebook"
                 target="_blank"
                 rel="nofollow noopener noreferrer"
-                class="social-media__item"
+                class="social-media__com"
               >
-                <svg class="social-media__icon" width="9.35px" height="20.4px">
-                  <use href="/src/images/icons-footer.svg#icon-facebook-project"></use>
-                </svg>
+                <div class="social-media__wrapper">
+                  <svg class="social-media__icon" width="9.35px" height="20.4px">
+                    <use href="/src/images/icons-footer.svg#icon-facebook-project"></use>
+                  </svg>
+                </div>
               </a>
             </li>
           </ul>
